# I-GCG

./: .gitignore  .gitmodules  Makefile  attack_llm_core_base.py  pyproject.toml  requirements.txt
data/: advbench_behaviors.json  gold_harmful_completions.json  gold_harmful_completions_smoke.json
deliverable/: experiment_report.json  smoothllm_sweep.json
igcg_upstream/: attack_llm_core_base.py
llm_attacks/base/: attack_manager.py
llm_attacks/minimal_gcg/: opt_utils.py
output/20260205-041104/log/: result_1.json
robust_gcg/: attack_harness.py  judge_hooks.py  semantic_eval.py
scripts/: build_advbench_json.py  fcd_attack_report.py  generate_gold_advbench.py  generate_gold_completions.py  generate_gold_smoke.py  geometry_eval_advbench.py  geometry_eval_full.py  geometry_eval_offline.py  geometry_eval_smoke.py  robust_gcg_F_slot_kmerge.py
scripts/slurm/: advbench_geometry.sbatch  advbench_gold.sbatch
